@@ -46,6 +46,9 @@
                     --add-opens=java.base/sun.security.util=ALL-UNNAMED
                     --add-opens=java.base/com.sun.crypto.provider=ALL-UNNAMED
                     --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.jca=ALL-UNNAMED
+                    --add-exports=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
                 </argLine>
             </properties>
         </profile>
