@@ -76,6 +76,8 @@
                     --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
                     --add-opens=java.base/javax.crypto=ALL-UNNAMED
                     --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
+                    --add-opens=java.base/java.nio=ALL-UNNAMED
+                    --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
                 </argLine>
             </properties>
         </profile>
